--- a/templates/book.html
+++ b/templates/book.html
@@ -3,11 +3,11 @@
 <div class="container">
     <h2>Your recipes</h2>
     <a href="/"><button class="btn btn-primary">New post</button></a>
-    {% if posts|length > 0 %}
-        {% for recipe in your_book_data %}
-            <h3>{{ recipe.name }}</h3>
-            <p>{{ post.content }}</p>
-            <p>{{ post.author }}</p>
+    {% if your_book|length > 0 %}
+        {% for recipe in your_book %}
+            <h3>{{ recipe.Name }}</h3>
+            <p>{{ recipe.URL }}</p>
+            <p>{{ recipe.Effort }}</p>
             <hr>
         {% endfor %}
     {% else %}
