--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <div class="container">
     <form id="new-post" action="/" method="post">
         <div class="form-group">
-            <label for="ingredients">Ingredients (separate with comma) </label>
+            <label for="ingredients">Ingredients (separate with space) </label>
             <textarea id="ingredients" class="form-control" name="ingredients"></textarea>
         </div>
         <button type="submit" class="btn btn-success">Generate book</button>
