touched up website look slightly

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
+    <h1>Recipe book generator</h1>
+    <hr>
     <form id="new-post" action="/" method="post">
         <div class="form-group">
             <label for="ingredients">Ingredients (separate with space) </label>
