--- a/templates/book.html
+++ b/templates/book.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <h2>Your recipes</h2>
+    <h1>Recipe book generator</h1>
+    <hr>
     <a href="/"><button class="btn btn-primary">New search</button></a>
+    <h2>Your recipes</h2>
     {% if your_book|length > 0 %}
         {% for recipe in your_book %}
             <h3><a href="{{ recipe.URL }}">{{ recipe.Name }}</a></h3>
             <p>{{ recipe.Effort }}, Number of ratings: {{ recipe.Ratings }}, Cook time: {{ recipe.Cooktime }}mins</p>
             <hr>
         {% endfor %}
+        <p>The above recipes are the highest scoring 50 recipes on BBC good food, out of their 10,000+ recipes,
+            accord to the following formula:  Number of words in the ingredients section that match your ingredients,
+        divided by the number of ingredients</p>
     {% else %}
         <h4>There aren't any recipes!</h4>
     {% endif %}
